<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="apk.typinglogger.MainActivity">
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/copy"
        android:title="@string/copy"
        app:iconTint="@color/colorWhite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:iconTint="@color/colorWhite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:iconTint="@color/colorWhite"
        app:showAsAction="ifRoom" />
</menu>